# kotoba-cutouter

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  design.md
src/: config.py  main.py  models.py
src/routers/: pages.py  search.py  transcription.py  video.py
src/services/: storage_service.py  transcription_service.py  video_service.py
src/templates/: base.html  index.html
static/css/: style.css
